artifacts/ingress/client-apps-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: client-apps-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: client-apps-ingress
spec:
  tls:
  - hosts:
    - preproduction.resourcewatch.org
    - south-africa-platform.vizzuality.com
    - indonesia-platform-staging.vizzuality.com
    - india-platform-staging.vizzuality.com
    secretName: ct-prod-tls-client-apps-ingress
  rules:
  - host: preproduction.resourcewatch.org
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
  - host: south-africa-platform.vizzuality.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
  - host: indonesia-platform-staging.vizzuality.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
  - host: india-platform-staging.vizzuality.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
